<resources>

    <plurals name="groups">
        <item quantity="zero">%1$d групп</item>
        <item quantity="one">%1$d группа</item>
        <item quantity="two">%1$d группы</item>
        <item quantity="few">%1$d групп</item>
        <item quantity="many">%1$d групп</item>
        <item quantity="other">%1$d групп</item>
    </plurals>

    <plurals name="groups_choosed">
        <item quantity="zero">Выбрано %1$d групп</item>
        <item quantity="one">Выбрана %1$d группа</item>
        <item quantity="two">Выбраны %1$d группы</item>
        <item quantity="few">Выбраны %1$d группы</item>
        <item quantity="many">Выбраны %1$d групп</item>
        <item quantity="other">Выбраны %1$d групп</item>
    </plurals>

    <plurals name="groups_same">
        <item quantity="zero">%1$d совпадающих групп</item>
        <item quantity="one">%1$d совпадающая группа</item>
        <item quantity="two">%1$d совпадающие группы</item>
        <item quantity="few">%1$d совпадающие группы</item>
        <item quantity="many">%1$d совпадающих групп</item>
        <item quantity="other">%1$d совпадающих групп</item>
    </plurals>

    <string name="app_name">PeoplesFinder</string>

    <string name="authorization_label">AuthorizationFragment</string>
    <string name="synchronize_label">SynchronizationFragment</string>
    <string name="groups_label">Группы</string>
    <string name="settings_label">Настройки</string>
    <string name="user_detail_label">Люди</string>
    <string name="lists_label">Люди</string>

    <string name="groups_menu_search_title">Поиск</string>

    <string name="retry">Попробовать ещё раз</string>

    <string name="fragment_groups_download_members_button_text">Загрузить участников групп</string>
    <string name="fragment_groups_download_button_start_download">Начать загрузку</string>
    <string name="fragment_groups_download_button_cancel_download">Отменить загрузку</string>
    <string name="fragment_groups_download_button_reload">Загрузить заново</string>
    <string name="fragment_groups_download_button_pause_download">Приостановить загрузку</string>
    <string name="fragment_groups_download_button_continue_load">Продолжить загрузку</string>
    <string name="fragment_groups_error_text_no_access_to_group_members">Превышен суточный лимит на загрузку\nПопробуйте продолжить загрузку позже</string>
    <string name="fragment_groups_error_text_unknown_error">Ошибка при загрузке\nПопробуйте загрузить ещё раз</string>

    <string name="item_group_no_access_to_group_members">Нет доступа к информации</string>

    <string name="fragment_results_no_results_load_not_started">Здесь будут отображаться пользователи с группами как у вас</string>
    <string name="fragment_results_no_results_load_started">Пользователи с группами как у вас пока не найдены</string>
    <string name="fragment_results_no_results_load_finished">К сожалению результаты отсутствуют</string>

    <string name="unknown_error">Неизветсная ошибка</string>

    <string name="dialog_user_detail_all_users_with_filters_shown">Были просмотрены все пользователи с указанными фильтрами</string>
    <string name="dialog_user_detail_no_users_with_filters">Не найдено пользователей соответсвующих указанным фильтрам</string>

    <string name="user_name_title">Имя</string>
    <string name="user_age_title">Возраст</string>
    <string name="user_sex_title">Пол</string>
    <string name="user_relation_title">Семейное положение</string>
    <string name="user_country_title">Страна</string>
    <string name="user_city_title">Город</string>

    <string name="dialog_user_detail_same_groups_title">%s совпадающих с пользователем:</string>
    <string name="dialog_user_detail_to_user_page_button_text">Перейти на страницу</string>

    <string name="user_relation_not_specified">не указано</string>
    <string name="user_relation_single_sex_male">не женат</string>
    <string name="user_relation_single_sex_female">не замужем</string>
    <string name="user_relation_single_sex_not_specified">не женат/не замужем</string>
    <string name="user_relation_in_a_relationship_sex_male">есть друг</string>
    <string name="user_relation_in_a_relationship_sex_female">есть подруга</string>
    <string name="user_relation_in_a_relationship_sex_not_specified">есть друг/есть подруга</string>
    <string name="user_relation_engaged_sex_male">помолвлен</string>
    <string name="user_relation_engaged_sex_female">помолвлена</string>
    <string name="user_relation_engaged_sex_not_specified">помолвлен/помолвлена</string>
    <string name="user_relation_married_sex_male">женат</string>
    <string name="user_relation_married_sex_female">замужем</string>
    <string name="user_relation_married_sex_not_specified">женат/замужем</string>
    <string name="user_relation_it_is_complicated">всё сложно</string>
    <string name="user_relation_actively_searching">в активном поиске</string>
    <string name="user_relation_in_love_sex_male">влюблён</string>
    <string name="user_relation_in_love_sex_female">влюблена</string>
    <string name="user_relation_in_love_sex_not_specified">влюблён/влюблена</string>
    <string name="user_relation_in_a_civil_union">в гражданском браке</string>
    <string name="user_relation_any">любое</string>

    <string name="user_sex_male">мужской</string>
    <string name="user_sex_female">женский</string>
    <string name="user_sex_not_specified">пол не указан</string>
    <string name="user_sex_any">любой</string>
    <string name="fragment_settings_country_title">Страна</string>
    <string name="fragment_settings_city_title">Город</string>
    <string name="fragment_settings_has_photo_title">С фотографией</string>
    <string name="fragment_settings_not_closed_title">Страница не закрыта</string>
    <string name="fragment_settings_required_groups_title">Обязательные совпадающие группы</string>
    <string name="fragment_settings_relation_title">Семейное положение</string>
    <string name="fragment_settings_sex_title">Пол</string>
    <string name="fragment_settings_age_title">Возраст</string>
    <string name="dash">-</string>

    <string name="any_feminine">любая</string>
    <string name="any_masculine">любой</string>
    <string name="any_neuter">любое</string>

    <string name="fragment_settings_requiredGroupsButton_zero_groups_choosed">Выбрать</string>
    <string name="dialog_single_choose_cancel_choice">Отменить выбор</string>
    <string name="dialog_single_choose_no_results_message">Нет результатов по данному запросу</string>

    <string name="choose_county_dialog_title">Выбор страны</string>
    <string name="choose_county_dialog_search_text_hint">Начните вводить название страны</string>

    <string name="choose_city_dialog_title">Выбор города</string>
    <string name="choose_city_dialog_search_text_hint">Начните вводить название города</string>

    <string name="choose_other_group_dialog_title">Выбор группы</string>
    <string name="choose_other_group_dialog_search_text_hint">Начните вводить название группы</string>

    <string name="choose_required_groups_dialog_title">Выбор групп</string>
    <string name="choose_required_groups_dialog_search_text_hint">Начните вводить название группы</string>

    <string name="fragment_photos_viewing_title">%s из %s</string>

    <string name="fragment_photos_viewing_no_photos_error">Нет фотографий</string>
    <string name="dialog_multichoose_drop_choice">Сбросить</string>
    <string name="dialog_multichoose_confirm_choice">Выбрать</string>
    <string name="dialog_multichoose_no_results_message">Нет результатов по данному запросу</string>

    <string name="fragment_authorization_error_text">Ошибка при загрузки страницы авторизации</string>
    <string name="fragment_authorization_start_page_greeting">Приветствую!\nДля работы приложения необходимо разрешение на получение списка ваших групп</string>
    <string name="fragment_authorization_start_page_continue">Продолжить</string>

</resources>