<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/authorization_fragment">

    <fragment
        android:id="@+id/authorization_fragment"
        android:name="ru.g0rd1.peoplesfinder.ui.authorization.AuthorizationFragment"
        android:label="@string/authorization_label" />

    <fragment
        android:id="@+id/synchronize_fragment"
        android:name="ru.g0rd1.peoplesfinder.ui.synchronization.SynchronizationFragment"
        android:label="@string/synchronize_label" />

    <fragment
        android:id="@+id/groups_fragment"
        android:name="ru.g0rd1.peoplesfinder.ui.groups.GroupsFragment"
        android:label="@string/groups_label" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="ru.g0rd1.peoplesfinder.ui.settings.SettingsFragment"
        android:label="@string/settings_label" />

    <fragment
        android:id="@+id/results_fragment"
        android:name="ru.g0rd1.peoplesfinder.ui.results.ResultsFragment"
        android:label="@string/results_label" />


</navigation>